--- a/index.css
+++ b/index.css
@@ -28,3 +28,14 @@ body{
 .flexBoxRPS img:hover{
     box-shadow: 0px 10px 50px rgba(37,50,233,1);
 }
+
+.replay{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    margin-top: 50px;
+    height:35px;
+    background-color:chartreuse;
+    border: none;
+    cursor: pointer;
+    
+}
